# ezsqlite3

./: .gitignore  .readthedocs.yml  CONTRIBUTING.md  README.md  README.rst  pyproject.toml
docs/: api.rst  conf.py  contributing.rst  index.rst  requirements.txt
ezsqlite3/: __init__.py  context.py  core.py  cursor.py
ezsqlite3/tests/: __init__.py  __main__.py  helpers.py  smoke.py
